# Netatalk

./: .gitignore  Makefile.am  NEWS  README.md  VERSION  bootstrap  config.h.meson  configure.ac  install.command  meson.build  meson_options.txt  uninstall.command
config/: AppleVolumes.default.tmpl  AppleVolumes.system  Makefile.am  afpd.conf.tmpl  atalkd.conf  meson.build
contrib/shell_utils/: Makefile.am  afpstats  apple_dump  asip-status.pl  asip-status.pl.in  debian_install.sh  meson.build
distrib/initscript/: Makefile.am  launchctl.sh  meson.build  netatalkd
distrib/initscripts/: .gitignore  Makefile.am  a2boot.service.tmpl  afpd.service.tmpl  atalkd.service.tmpl  cnid.service.tmpl  papd.service.tmpl  rc.a2boot.netbsd.tmpl  rc.afpd.netbsd.tmpl  rc.atalk.bsd.tmpl  rc.atalk.debian.tmpl  rc.atalk.gentoo.tmpl  rc.atalk.redhat-sysv.tmpl  rc.atalk.suse-sysv.tmpl  rc.atalk.sysv.tmpl  rc.atalk.tru64.tmpl  rc.atalkd.netbsd.tmpl  rc.cnid_metad.netbsd.tmpl  rc.papd.netbsd.tmpl  rc.timelord.netbsd.tmpl  service.a2boot.systemd.tmpl  service.afpd.systemd.tmpl  service.atalkd.systemd.tmpl  service.cnid.systemd.tmpl  service.papd.systemd.tmpl  service.timelord.systemd.tmpl  timelord.service.tmpl
doc/manpages/man1/: Makefile.am  ad.1.xml  afpldaptest.1.xml  afppasswd.1.xml  afpstats.1.xml  apple_dump.1.xml  asip-status.pl.1.xml  dbd.1.xml  macusers.1.xml  megatron.1.xml  meson.build  netatalk-config.1.xml  uniconv.1.xml
etc/afpd/: Makefile.am  acl_mappings.h  acls.c  acls.h  afp_asp.c  afp_config.c  afp_dsi.c  afp_options.c  afp_util.c  afprun.c  afpstats.c  afpstats_obj.c  afpstats_service_glue.h  afs.c  appl.c  auth.c  auth.h  catsearch.c  desktop.c  desktop.h  dircache.c  dircache.h  directory.c  directory.h  enumerate.c  extattrs.c  fce_api.c  fce_util.c  file.c  file.h  filedir.c  filedir.h  fork.c  fork.h  gettok.c  hash.c  icon.h  main.c  mangle.c  mangle.h  (+15 more)
etc/cnid_dbd/: Makefile.am  cmd_dbd.c  cmd_dbd_scanvol.c  cnid_metad.c  comm.c  db_param.c  dbd_add.c  dbd_dbcheck.c  dbd_delete.c  dbd_get.c  dbd_getstamp.c  dbd_lookup.c  dbd_rebuild_add.c  dbd_resolve.c  dbd_search.c  dbd_update.c  dbif.c  dbif.h  main.c  meson.build  pack.c  usockfd.c  usockfd.h
etc/netatalk/: Makefile.am  afp_mdns.c  afp_zeroconf.c  meson.build  netatalk.c
etc/uams/: Makefile.am  meson.build  uams_dhx2_pam.c  uams_dhx2_passwd.c  uams_dhx_pam.c  uams_dhx_passwd.c  uams_gss.c  uams_guest.c  uams_pam.c  uams_passwd.c  uams_pgp.c  uams_randnum.c
etc/uams/uams_krb4/: kuam.c  lifetime.c  send_to_kdc.c  uams_krb4.c
include/atalk/: Makefile.am  acl.h  adouble.h  aep.h  afp.h  asp.h  atp.h  bstradd.h  bstrlib.h  cnid_bdb_private.h  compat.h  dalloc.h  ddp.h  directory.h  dsi.h  ea.h  errchk.h  globals.h  ldapconfig.h  logger.h  meson.build  nbp.h  netddp.h  pap.h  paths.h  queue.h  rpc.h  server_child.h  standards.h  talloc.h  tdb.h  unix.h  util.h  vfs.h  volume.h  zip.h
libatalk/: Makefile.am  meson.build
libatalk/acl/: Makefile.am  cache.c  ldap.c  ldap_config.c  meson.build  unix.c  uuid.c
libatalk/adouble/: Makefile.am  ad_attr.c  ad_conv.c  ad_date.c  ad_flush.c  ad_lock.c  ad_mmap.c  ad_open.c  ad_read.c  ad_recvfile.c  ad_sendfile.c  ad_size.c  ad_write.c  meson.build
libatalk/asp/: asp_attn.c  asp_close.c  asp_cmdreply.c  asp_getreq.c  asp_getsess.c  asp_init.c  asp_shutdown.c  asp_tickle.c  asp_write.c
libatalk/atp/: atp_bufs.c  atp_close.c  atp_internals.h  atp_open.c  atp_packet.c  atp_rreq.c  atp_rresp.c  atp_rsel.c  atp_sreq.c  atp_sresp.c
libatalk/attic/tdb/: tdb.c
libatalk/bstring/: bstradd.c  bstrlib.c  meson.build
libatalk/cnid/: Makefile.am  cnid.c  cnid_init.c  meson.build
libatalk/cnid/attic/cdb/: cnid_cdb_add.c  cnid_cdb_close.c  cnid_cdb_get.c  cnid_cdb_nextid.c  cnid_cdb_open.c  cnid_cdb_private.h  cnid_cdb_rebuild_add.c  cnid_cdb_resolve.c  (+1 more)
libatalk/cnid/cdb/: cnid_cdb_delete.c  cnid_cdb_lookup.c
libatalk/cnid/dbd/: cnid_dbd.c  cnid_dbd.h  meson.build
libatalk/cnid/last/: cnid_last.c  cnid_last.h  meson.build
libatalk/cnid/mysql/: cnid_mysql.c  meson.build
libatalk/cnid/tdb/: cnid_tdb.h  cnid_tdb_add.c  cnid_tdb_close.c  cnid_tdb_delete.c  cnid_tdb_get.c  cnid_tdb_lookup.c  cnid_tdb_nextid.c  cnid_tdb_open.c  cnid_tdb_resolve.c  cnid_tdb_update.c  meson.build
libatalk/compat/: Makefile.am  rquota_xdr.c
libatalk/dsi/: dsi_attn.c  dsi_close.c  dsi_cmdreply.c  dsi_getsess.c  dsi_getstat.c  dsi_init.c  dsi_opensess.c  dsi_read.c  dsi_stream.c  dsi_tcp.c  dsi_tickle.c  dsi_write.c  meson.build
libatalk/iniparser/: dictionary.c  iniparser.c  meson.build
libatalk/locking/: locking.c  meson.build
libatalk/nbp/: nbp_lkup.c  nbp_rgstr.c  nbp_unrgstr.c  nbp_util.c
libatalk/netddp/: netddp_open.c  netddp_recvfrom.c  netddp_sendto.c
libatalk/talloc/: dalloc.c  talloc.c
libatalk/tdb/: check.c  dump.c  error.c  freelist.c  freelistcheck.c  hash.c  io.c  lock.c  meson.build  mutex.c  open.c  rescue.c  spinlock.c  spinlock.h  summary.c  tdb.c  tdb_private.h  transaction.c  traverse.c
libatalk/unicode/: byteorder.h  charcnv.c  iconv.c  meson.build  precompose.h  utf16_case.c  utf16_casetable.h  utf8.c  util_unistr.c
libatalk/unicode/charsets/: generic_cjk.c  generic_cjk.h  generic_mb.c  generic_mb.h  mac_centraleurope.c  mac_centraleurope.h  mac_chinese_simp.c  mac_chinese_simp.h  mac_chinese_trad.c  mac_chinese_trad.h  mac_cyrillic.c  mac_cyrillic.h  mac_greek.c  mac_greek.h  mac_hebrew.c  mac_hebrew.h  mac_japanese.c  mac_japanese.h  mac_korean.c  mac_korean.h  mac_roman.c  mac_roman.h  mac_turkish.c  mac_turkish.h  meson.build
libatalk/util/: Makefile.am  atalk_addr.c  bprint.c  cnid.c  fault.c  ftw.c  getiface.c  gettok.c  locking.c  logger.c  meson.build  module.c  netatalk_conf.c  queue.c  server_child.c  server_ipc.c  server_lock.c  socket.c  strcasestr.c  strdicasecmp.c  strlcpy.c  unix.c  volinfo.c
libatalk/vfs/: Makefile.am  acl.c  ea.c  ea_ad.c  ea_sys.c  extattr.c  meson.build  sys_ea.c  unix.c  vfs.c
test/afpd/: Makefile.am  afpfunc_helpers.c  afpfunc_helpers.h  meson.build  subtests.c  subtests.h  test.c  test.h  test.sh
(+176 files in other folders)
